--- a/alembic.ini
+++ b/alembic.ini
@@ -52,7 +52,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:test1234@localhost/bot
+sqlalchemy.url = postgresql://postgres:test1234@host.docker.internal/bot
 
 
 [post_write_hooks]
